--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,13 +1,10 @@
 .vscode/**
 .vscode-test/**
 out/test/**
-test/**
 src/**
-**/*.map
-.git/**
 .gitignore
-tsconfig.json
-tslint.json
-typings.json
-typings/**
 vsc-extension-quickstart.md
+**/tsconfig.json
+**/.eslintrc.json
+**/*.map
+**/*.ts
