--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,17 @@
         "module": "commonjs",
         "target": "es6",
         "outDir": "out",
-        "lib": [
-            "es6"
-        ],
+        "lib": ["es6"],
+        "experimentalDecorators": true,
+        "removeComments": true,
         "sourceMap": true,
-        "rootDir": ".",
-        "skipLibCheck": true
+        "rootDir": "src",
+        "baseUrl": "./src",
+        "strict": true,
+        "esModuleInterop": true,
+        "paths": {
+            "~/*": ["./*"]
+        }
     },
-    "exclude": [
-        "node_modules",
-        ".vscode-test"
-    ]
+    "exclude": ["node_modules", ".vscode-test", "old"]
 }
