--- a/package.json
+++ b/package.json
@@ -28,9 +28,6 @@
     "categories": [
         "Other"
     ],
-    "_moduleAliases": {
-        "~": "out"
-    },
     "keywords": [
         "increment",
         "decrement",
@@ -319,41 +316,42 @@
     },
     "scripts": {
         "clean": "rm -rf ./out",
-        "compile-clean": "npm run clean && npm run compile",
-        "compile": "tsc -p ./",
+        "dev": "webpack --mode development",
         "lint": "eslint src --ext ts",
-        "pack": "vsce package --yarn",
-        "pretest": "npm run compile && npm run lint",
-        "pub": "vsce publish --githubBranch master",
+        "old-pretest": "npm run compile && npm run lint",
+        "pack": "vsce package",
+        "prod": "webpack --mode production",
+        "pub": "vsce publish",
         "release-major": "standard-version --release-as=major --message='build(release): %s'",
         "release-minor": "standard-version --release-as=minor --message='build(release): %s'",
         "release": "standard-version --message='build(release): %s'",
+        "test-compile": "npm run clean && tsc -p ./",
         "test": "node ./out/test/runTest.js",
-        "vscode:prepublish": "npm run compile",
-        "watch": "tsc -watch -p ./"
+        "vscode:prepublish": "npm run prod",
+        "watch": "webpack --mode development --watch"
     },
     "devDependencies": {
         "@smith-web-design/eslint-config": "^2.0.4",
         "@types/chai": "^4.2.12",
         "@types/glob": "^7.1.3",
-        "@types/lodash": "^4.14.159",
+        "@types/lodash-es": "^4.17.3",
         "@types/mocha": "^8.0.3",
         "@types/node": "^14.6.0",
         "@types/vscode": "^1.48.0",
         "@types/xregexp": "^4.3.0",
+        "bignumber.js": "^9.0.0",
         "chai": "^4.2.0",
         "eslint": "^7.7.0",
         "glob": "^7.1.6",
+        "lodash-es": "^4.17.15",
         "mocha": "^8.1.1",
         "standard-version": "^9.0.0",
-        "ts-node": "^8.10.2",
+        "ts-loader": "^8.0.2",
         "typescript": "^3.9.7",
-        "vscode-test": "^1.4.0"
-    },
-    "dependencies": {
-        "bignumber.js": "^9.0.0",
-        "lodash": "^4.17.20",
-        "module-alias": "^2.2.2",
+        "vscode-test": "^1.4.0",
+        "webpack": "^4.44.1",
+        "webpack-cli": "^3.3.12",
         "xregexp": "^4.3.0"
-    }
+    },
+    "dependencies": {}
 }
