--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ os:
 
 install:
   - npm install
-  - npm run vscode:prepublish
+  - npm run test-compile
+  - npm run dev
 
 script:
-  - npm test --silent
+  - npm run test
