--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,18 @@
             "preLaunchTask": "npm: dev"
         },
         {
+            "name": "Run Extension (with extensions)",
+            "type": "pwa-extensionHost",
+            "request": "launch",
+            "runtimeExecutable": "${execPath}",
+            "args": [
+                "--extensionDevelopmentPath=${workspaceFolder}",
+                "${workspaceFolder}/src/test/demos/demo.js"
+            ],
+            "outFiles": ["${workspaceFolder}/out/**/*.js"],
+            "preLaunchTask": "npm: dev"
+        },
+        {
             "name": "Run Extension (watch)",
             "type": "pwa-extensionHost",
             "request": "launch",
