build(standard-version): update `standard-version` version bump script

--- a/package.json
+++ b/package.json
@@ -218,9 +218,9 @@
         "pack": "vsce package",
         "prod": "webpack --mode production",
         "pub": "vsce publish",
-        "release-major": "standard-version --release-as=major --message='build(release): %s'",
-        "release-minor": "standard-version --release-as=minor --message='build(release): %s'",
-        "release": "standard-version --message='build(release): %s'",
+        "release-major": "standard-version --release-as=major",
+        "release-minor": "standard-version --release-as=minor",
+        "release": "standard-version",
         "test-compile": "npm run clean && tsc -p ./",
         "test": "node ./out/test/runTest.js",
         "vscode:prepublish": "npm run prod",
