--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
     "typescript.tsc.autoDetect": "off",
     "prettier.eslintIntegration": false,
-    "eslint.enable": true
+    "eslint.enable": true,
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
