--- a/package.json
+++ b/package.json
@@ -221,6 +221,7 @@
         "release-major": "standard-version --release-as=major",
         "release-minor": "standard-version --release-as=minor",
         "release": "standard-version",
+        "release-auto": "ts-node ./scripts/release.ts",
         "test-compile": "npm run clean && tsc -p ./",
         "test": "node ./out/test/runTest.js",
         "vscode:prepublish": "npm run prod",
@@ -230,10 +231,13 @@
     "devDependencies": {
         "@smith-web-design/eslint-config": "^2.0.5",
         "@types/chai": "^4.2.12",
+        "@types/conventional-recommended-bump": "^6.0.0",
         "@types/glob": "^7.1.3",
         "@types/lodash-es": "^4.17.3",
         "@types/mocha": "^8.0.3",
         "@types/node": "^14.6.0",
+        "@types/semver": "^7.3.3",
+        "@types/standard-version": "^7.0.0",
         "@types/vscode": "^1.48.0",
         "@types/xregexp": "^4.3.0",
         "bignumber.js": "^9.0.0",
@@ -242,8 +246,10 @@
         "glob": "^7.1.6",
         "lodash-es": "^4.17.15",
         "mocha": "^8.1.1",
+        "read-package-json": "^2.1.2",
         "standard-version": "^9.0.0",
         "ts-loader": "^8.0.3",
+        "ts-node": "^9.0.0",
         "typescript": "^4.0.2",
         "vscode-test": "^1.4.0",
         "webpack": "^4.44.1",
