--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
             "~/*": ["./*"]
         }
     },
-    "exclude": ["node_modules", ".vscode-test", "old"]
+    "exclude": ["node_modules", ".vscode-test", "old", "./scripts"]
 }
